--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <img class="profile-img" src="./assets/Deepali's profile picture-modified.png" alt="profile-img">
                 <h2>Hello.</h2>
                 <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla
-                    distinctio.</p>
+                    distinction.</p>
             </div>
             <hr>
             <div class="skills">
